--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,7 @@
 		<a href="{{ site.root }}/tips-and-tricks/">Tips</a>
 		<a href="{{ site.root }}/frequently-asked-questions/">FAQ</a>
 		<a href="http://minecraft.curseforge.com/projects/chisels-bits/images">Screenshots</a>
+		<a href="http://www.minecraftforum.net/forums/mapping-and-modding/minecraft-mods/2576750-chisels-bits-flat-colored-blocks">Discussion</a>
 		<a href="https://github.com/AlgorithmX2/Chisels-and-Bits/issues">Issues / Features</a>
 		<a href="http://minecraft.curseforge.com/projects/chisels-bits/files">Downloads</a>
 	</nav>
