--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,7 @@
 		<a href="http://www.minecraftforum.net/forums/mapping-and-modding/minecraft-mods/2576750-chisels-bits-flat-colored-blocks">Discussion</a>
 		<a href="https://github.com/AlgorithmX2/Chisels-and-Bits/issues">Issues / Features</a>
 		<a href="http://minecraft.curseforge.com/projects/chisels-bits/files">Downloads</a>
+		<a href="https://www.reddit.com/r/chiselsandbits">Subreddit</a>
 	</nav>
 
 	<div class="page first-page">
