--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,7 @@
 		<a href="https://github.com/AlgorithmX2/Chisels-and-Bits/issues">Issues / Features</a>
 		<a href="http://minecraft.curseforge.com/projects/chisels-bits/files">Downloads</a>
 		<a href="https://www.reddit.com/r/chiselsandbits">Subreddit</a>
+		<a href="https://discord.gg/hSDcXXb">Discord</a>		
 	</nav>
 
 	<div class="page first-page">
