Update the wiki

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,11 +22,12 @@
 		<a href="{{ site.root }}/tips-and-tricks/">Tips</a>
 		<a href="{{ site.root }}/frequently-asked-questions/">FAQ</a>
 		<a href="http://minecraft.curseforge.com/projects/chisels-bits/images">Screenshots</a>
-		<a href="http://www.minecraftforum.net/forums/mapping-and-modding/minecraft-mods/2576750-chisels-bits-flat-colored-blocks">Discussion</a>
-		<a href="https://github.com/AlgorithmX2/Chisels-and-Bits/issues">Issues / Features</a>
+		<a href="https://github.com/Chisels-and-Bits/Chisels-and-Bits/issues">Issues / Features</a>
 		<a href="http://minecraft.curseforge.com/projects/chisels-bits/files">Downloads</a>
 		<a href="https://www.reddit.com/r/chiselsandbits">Subreddit</a>
-		<a href="https://discord.gg/hSDcXXb">Discord</a>		
-	</nav>
+		<a href="https://discord.chisels-and-bits.com">Discord</a>
+        <!--<a href="https://store.chisels-and-bits.com">Store</a>-->
+        <a href="https://patreon.chisels-and-bits.com">Patreon</a>
+    </nav>
 
 	<div class="page first-page">
