--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -5,7 +5,7 @@
 {% for item in site.data.items %}{% if page.item == item.id %}
 		
 	<div id="itemHeader">
-		<img class="item_icon" alt="{{ item.name }}" src="{{ site.root }}/images/items/{{ item.icon }}" />
+		<img class="item_icon" alt="{{ item.name }}" src="{{ site.root }}/assets/images/items/chiselsandbits/{{ item.icon }}" />
 		<h1>{{ item.name }}</h1>
 		<h6>First Seen in version {{ item.version }}</h6>
 	</div>
