--- a/_includes/blocklist.html
+++ b/_includes/blocklist.html
@@ -7,7 +7,7 @@
 	{% for block in site.data.blocks %}
 		<li>
 			<a title="{{ block.name }} " href="{{ site.root }}/blocks/{{ block.url | slugify }}/ ">
-				<img class="block_icon" alt="{{ block.name }}" src="{{ site.root }}/images/blocks/{{ block.icon }}" />
+				<img class="block_icon" alt="{{ block.name }}" src="{{ site.root }}/assets/images/items/chiselsandbits/{{ block.icon }}" />
 			</a>
 		</li>
 	{% endfor %}
