--- a/_includes/itemlist.html
+++ b/_includes/itemlist.html
@@ -7,7 +7,7 @@
 	{% for item in site.data.items %}
 		<li>
 			<a title="{{ item.name }} " href="{{ site.root }}/items/{{ item.url | slugify }}/ ">
-				<img class="item_icon" alt="{{ item.name }}" src="{{ site.root }}/images/items/{{ item.icon }}" />
+				<img class="item_icon" alt="{{ item.name }}" src="{{ site.root }}/assets/images/items/chiselsandbits/{{ item.icon }}" />
 			</a>
 		</li>
 	{% endfor %}
